first paragraph of chapter 1 is awesome

--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -5,20 +5,47 @@
 
 \chapter{Úvod}\label{ch:uvod}
 
-\todo{
-\begin{itemize}
-    \item popis tématu a jeho důležitost
-    \item motivace práce
-    \item co bude c\'{\i}lem a požadovan\'ym v\'ystupem této práce
-    \item popis struktury DP
-\end{itemize}
-}
+%\todo{
+%\begin{itemize}
+%    \item popis tématu a jeho důležitost
+%    \item motivace práce
+%    \item co bude c\'{\i}lem a požadovan\'ym v\'ystupem této práce
+%    \item popis struktury DP
+%\end{itemize}
+%}
 
-\section{Jak č\'{\i}st tuto práci}
+\goal{Informační systémy a jejich důležitost}
+
+Informační systémy se ve 21. století staly neodmyslitelnou součástí našich každodenních životů.
+Do styku s nimi přicházíme jak při výkonu našich povolání, tak ve volném čase. Usnadňují
+mnoho aspektů našich činností. Jejich využití sahá do mnoha sektorů, od vzdělání a vědy,
+kde významně usnadnili přístup ke studijním materiálům, přes zdravotnictví,
+kde pomáhají zvyšovat efektivitu a úroveň péče o pacienty~\cite{fichman2011editorial}, až po
+sociální sítě, kde umožňují lidem globálně komunikovat a sdílet své myšlenky, pocity a zážitky.
+Jako budoucí profesionálové v oblasti informačních technologií máme za úkol nejen
+rozvíjet a vylepšovat funkcionalitu informačních systému, ale také zkoumat možnosti, kterými
+bychom mohli tento proces zjednodušit a zefektivnit. Jen díky tomu budeme moci dostát stále
+rostoucímu množství požadavků na informační systémy.
+
+\goal{SOA}
+
+
+
+\goal{Byznysová pravidla}
+
+
+
+%\section{Jak č\'{\i}st tuto práci}
+
+\goal{Motivace a cíle}
+Motivací této práce je prozkoumat myšlenku inovativního přístupu k centrální správě a automatické
+distribuci byznysových pravidel, která by usnadnila práci vývojářů a doménových expertů. Díky tomu
+by tento přístup mohl přinést snížení nákladů na vývoj a údržbu systémů využívajících architekturu
+orientovanou na služby.
 
 \goal{Popis struktury DP a obsah kapitol}
 Kapitola~\ref{ch:analyza} se věnuje detailn\'{\i} anal\'yze problematiky bynysov\'ych pravidel a
-architektury orientované na služby, včetně jej\'{\i}ho historického v\'yvoje až po nejnovějš\'{\i} trendy
+architektury orientované na služby, včetně jej\'{\i}ho historického v\'yvoje až po nejnovějš\'{\i} trendy,
 a v závěru identifikuje požadavky kladené na implementaci knihovny pro centráln\'{\i} správu a
 automatickou distribuci byznysov\'ych pravidel v této architektuře. Kapitola~\ref{ch:reserse}
 se zab\'yvá rešerš\'{\i} stávaj\'{\i}c\'{\i}ch pr\'{\i}stupu k v\'yvoji informacn\'{\i}ch systému a speciálně se zaměřuje
@@ -34,6 +61,6 @@ je zde popsána validace a vyhodnocen\'{\i} konceptu frameworku jeho nasazen\'{\
 jednoduchého ukázkového e-commerce systému. V posledn\'{\i} kapitole~\ref{ch:zaver} je shrnuto, jak\'ych
 c\'{\i}lů bylo v práci dosáhnuto a jak\'ym dalš\'{\i}m směrem se může v\'yzkum v této oblasti ub\'{\i}rat.
 
-\goal{Zkratky}
-Zkratky použ\'{\i}vané v textu jsou vždy nejdř\'{\i}ve zavedeny a vysvětleny. Pro přehlednost byl ale zároveň
-souhrn použ\'{\i}van\'ych zkratek přidán jako př\'{\i}loha práce~\ref{ch:shortcuts}.
+%\goal{Zkratky}
+%Zkratky použ\'{\i}vané v textu jsou vždy nejdř\'{\i}ve zavedeny a vysvětleny. Pro přehlednost byl ale zároveň
+%souhrn použ\'{\i}van\'ych zkratek přidán jako př\'{\i}loha práce~\ref{ch:shortcuts}.
