--- a/reference.bib
+++ b/reference.bib
@@ -740,3 +740,14 @@
     url = {http://people.apache.org/~fhanik/kiss.html},
     urldate = {2018-04-27}
 }
+
+@article{fichman2011editorial,
+    title={Editorial overview—the role of information systems in healthcare: current research and future trends},
+    author={Fichman, Robert G and Kohli, Rajiv and Krishnan, Ranjani},
+    journal={Information Systems Research},
+    volume={22},
+    number={3},
+    pages={419--428},
+    year={2011},
+    publisher={INFORMS}
+}
