--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -3,8 +3,10 @@
 \newglossaryentry{AST}{name=AST,description={Abstract Syntax Tree}}
 \newglossaryentry{AOP}{name=AOP,description={Aspect Oriented Programming}}
 \newglossaryentry{BDD}{name=BDD,description={Behaviour Driven Development}}
+\newglossaryentry{BPEL}{name=BPEL,description={Business Process Execution Language}}
 \newglossaryentry{BRMS}{name=BRMS,description={Business Rules Management System}}
 \newglossaryentry{CI}{name=CI,description={Continuous Integration}}
+\newglossaryentry{CIM}{name=CIM,description={Computation Independent Model}}
 \newglossaryentry{CORBA}{name=CORBA,description={Common Object Request Broker Architecture}}
 \newglossaryentry{CRUD}{name=CRUD,description={Create, Read, Update, Delete}}
 \newglossaryentry{CSS}{name=CSS,description={Cascading Style Sheets}}
@@ -14,6 +16,7 @@
 \newglossaryentry{EIS}{name=EIS,description={Enterprise Information System}}
 \newglossaryentry{EL}{name=EL,description={Expression Language}}
 \newglossaryentry{ESB}{name=ESB,description={Enterprise Service Bus}}
+\newglossaryentry{GP}{name=GP,description={Generative Programming}}
 \newglossaryentry{HATEOAS}{name=HATEOAS,description={Hypermedia as the engine ot application state}}
 \newglossaryentry{HTML}{name=HTML,description={Hypertext Markup Language}}
 \newglossaryentry{HTTP}{name=HTTP,description={Hypertext Transfer Protocol}}
