--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -449,6 +449,8 @@ b\'yt zohledněny při návrhu a implementaci frameworku, kter\'y bude sloužit
 pro centráln\'{\i} administraci a automatickou distribuci byznysov\'ych pravidel
 v architektuře orientované na služby.
 
+% TODO: odúvodnit potřebu změny pravidel za běhu programu
+
 Framework, resp. jeho knihovny, by měly umožňovat:
 
 \begin{itemize}
