--- a/reference.bib
+++ b/reference.bib
@@ -322,48 +322,6 @@
     urldate = {2018-04-12},
 }
 
-@online{protobuf,
-    key = {Protocol Buffers | Google Developers},
-    title = {Protocol Buffers | Google Developers},
-    url = {https://developers.google.com/protocol-buffers/},
-    urldate = {2018-04-12},
-}
-
-@online{thrift,
-    key = {Apache Thrift - Home},
-    title = {Apache Thrift - Home},
-    url = {https://thrift.apache.org/},
-    urldate = {2018-04-12},
-}
-
-@online{avro,
-    key = {Welcome to Apache Avro!},
-    title = {Welcome to Apache Avro!},
-    url = {https://avro.apache.org/},
-    urldate = {2018-04-12},
-}
-
-@online{grpcio,
-    key = {gRPC open-source universal RPC framework},
-    title = {gRPC open-source universal RPC framework},
-    url = {https://grpc.io/},
-    urldate = {2018-04-12},
-}
-
-@online{jdom2,
-    key = {JDOM},
-    title = {JDOM},
-    url = {http://www.jdom.org/},
-    urldate = {2018-04-12},
-}
-
-@online{pip,
-    key = {pip - pip 9.0.3 documentation},
-    title = {pip - pip 9.0.3 documentation},
-    url = {https://pip.pypa.io/en/stable/},
-    urldate = {2018-04-12},
-}
-
 @online{ecma60,
     key = {ECMAScript® 2015 Language Specification - Ecma-262 6th Edition},
     title = {ECMAScript® 2015 Language Specification - Ecma-262 6th Edition},
@@ -375,27 +333,6 @@
     key = {What is the MIT license? -- definition by The Linux Information Project (LINFO)},
     title = {What is the MIT license? -- definition by The Linux Information Project (LINFO)},
     url = {http://www.linfo.org/mitlicense.html},
-    urldate = {2018-04-12},
-}
-
-@online{yarnpkg,
-    key = {Fast, reliable, and secure dependency management.},
-    title = {Fast, reliable, and secure dependency management.},
-    url = {https://yarnpkg.com/en/},
-    urldate = {2018-04-12},
-}
-
-@online{rimraf,
-    key = {isaacs/rimraf},
-    title = {isaacs/rimraf},
-    url = {https://github.com/isaacs/rimraf},
-    urldate = {2018-04-12},
-}
-
-@online{babel,
-    key = {Babel · The compiler for writing next generation JavaScript},
-    title = {Babel · The compiler for writing next generation JavaScript},
-    url = {https://babeljs.io/},
     urldate = {2018-04-12},
 }
 
@@ -445,34 +382,6 @@
     year = {2005}
 }
 
-@online{junit4,
-    key = {JUnit - About},
-    title = {JUnit - About},
-    url = {https://junit.org/junit4/},
-    urldate = {2018-04-14},
-}
-
-@online{springboot,
-    key = {Spring Boot},
-    title = {Spring Boot},
-    url = {https://projects.spring.io/spring-boot/},
-    urldate = {2018-04-14},
-}
-
-@online{flask,
-    key = {Welcome | Flask (A Python Microframework)},
-    title = {Welcome | Flask (A Python Microframework)},
-    url = {http://flask.pocoo.org/},
-    urldate = {2018-04-14},
-}
-
-@online{pythonunittest,
-    key = {26.4. unittest — Unit testing framework – Python 3.6.5 documentation},
-    title = {26.4. unittest — Unit testing framework – Python 3.6.5 documentation},
-    url = {https://docs.python.org/3/library/unittest.html},
-    urldate = {2018-04-18},
-}
-
 @article{luo2001software,
     title = {Software testing techniques},
     author = {Luo, Lu},
@@ -483,47 +392,12 @@
     year = {2001}
 }
 
-@online{maven,
-    key = {Maven – Welcome to Apache Maven},
-    title = {Maven – Welcome to Apache Maven},
-    url = {https://maven.apache.org/},
-    urldate = {2018-04-18},
-}
-
-@online{mocha,
-    key = {Mocha – the fun, simple, flexible JavaScript test framework},
-    title = {Mocha – the fun, simple, flexible JavaScript test framework},
-    url = {https://mochajs.org/},
-    urldate = {2018-04-18},
-}
-
-@online{chai,
-    key = {Chai},
-    title = {Chai},
-    url = {http://www.chaijs.com/},
-    urldate = {2018-04-18},
-}
-
 @book{bittner2002use,
     title = {Use case modeling},
     author = {Bittner, Kurt},
     year = {2002},
     publisher = {Addison-Wesley Longman Publishing Co., Inc.},
     address = {Boston, Massachusetts, USA},
-}
-
-@online{dockernodeimage,
-    key = {library/node - Docker Hub},
-    title = {library/node - Docker Hub},
-    url = {https://hub.docker.com/_/node/},
-    urldate = {2018-04-18},
-}
-
-@online{linux,
-    key = {Linux – The Linux Foundation},
-    title = {Linux – The Linux Foundation},
-    url = {https://www.linuxfoundation.org/projects/linux/},
-    urldate = {2018-04-18},
 }
 
 @inproceedings{solis2011study,
@@ -533,27 +407,6 @@
     pages = {383--387},
     year = {2011},
     organization = {IEEE}
-}
-
-@online{expressjs,
-    key = {Express – Node.js web application framework},
-    title = {Express – Node.js web application framework},
-    url = {https://expressjs.com/},
-    urldate = {2018-04-20}
-}
-
-@online{git,
-    key = {Git},
-    title = {Git},
-    url = {https://git-scm.com/},
-    urldate = {2018-04-20}
-}
-
-@online{techtargetclientserver,
-    key = {What is client/server (client/server model, client/server architecture)?},
-    title = {What is client/server (client/server model, client/server architecture)?},
-    url = {https://searchnetworking.techtarget.com/definition/client-server},
-    urldate = {2018-04-22}
 }
 
 @article{postel1981transmission,
@@ -600,13 +453,6 @@
     address = {Cham, Switzerland},
 }
 
-@online{jetbrainsmps,
-    key = {MPS: Domain-Specific Language Creator by JetBrains},
-    title = {MPS: Domain-Specific Language Creator by JetBrains},
-    url = {https://www.jetbrains.com/mps/},
-    urldate = {2018-04-23}
-}
-
 @article{ward1994language,
     title = {Language-oriented programming},
     author = {Ward, Martin P},
@@ -637,13 +483,6 @@
     year = {1986},
     publisher = {Elsevier},
     address = {New York, USA},
-}
-
-@online{drools,
-    key = {Drools - Drools - Business Rules Management System (Java\texttrademark, Open Source)},
-    title = {Drools - Drools - Business Rules Management System (Java\texttrademark, Open Source)},
-    url = {https://www.drools.org/},
-    urldate = {2018-04-23}
 }
 
 @incollection{forgy1988rete,
@@ -680,27 +519,6 @@
     pages = {5--13},
     year = {2017},
     publisher = {ACM}
-}
-
-@online{businessrulespython,
-    key = {business-rules – PyPi},
-    title = {business-rules – PyPi},
-    url = {https://pypi.org/project/business-rules/},
-    urldate = {2018-04-23}
-}
-
-@online{flexrule,
-    key = {FlexRule – Business Rule Language},
-    title = {FlexRule – Business Rule Language},
-    url = {http://www.flexrule.com/archives/business-rule-language/},
-    urldate = {2018-04-23}
-}
-
-@online{jrules,
-    key = {IBM Knowledge Center - JRules engine mode},
-    title = {IBM Knowledge Center - JRules engine mode},
-    url = {https://www.ibm.com/support/knowledgecenter/en/SSZJPZ_11.3.0/com.ibm.swg.im.iis.conn.jrules.use.doc/topics/c_jrules_enginemode.html},
-    urldate = {2018-04-23}
 }
 
 @article{bernard2009jsr,
@@ -750,4 +568,21 @@
     pages={419--428},
     year={2011},
     publisher={INFORMS}
+}
+
+@incollection{czarnecki2000generative,
+    title={Generative programming and active libraries},
+    author={Czarnecki, Krzysztof and Eisenecker, Ulrich and Gl{\"u}ck, Robert and Vandevoorde, David and Veldhuizen, Todd},
+    booktitle={Generic Programming},
+    pages={25--39},
+    year={2000},
+    publisher={Springer},
+    address = {Cham, Switzerland},
+}
+
+@misc{andrews2003business,
+    title={Business process execution language for web services},
+    author={Andrews, Tony and Curbera, Francisco and Dholakia, Hitesh and Goland, Yaron and Klein, Johannes and Leymann, Frank and Liu, Kevin and Roller, Dieter and Smith, Doug and Thatte, Satish and others},
+    year={2003},
+    publisher={version}
 }
