--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -21,7 +21,7 @@ a t\'{\i}m byla verifikována jejich správná funkcionalita. Způsob
 testován\'{\i} knihoven si pop\'{\i}šeme zvlášť pro každou platformu.
 
 V rámci konceptu \textit{continous integration} (\gls{CI})~\cite{fowler2006continuous}
-byl kód po celou dobu v\'yvoje verzován systémem Git~\cite{git},
+byl kód po celou dobu v\'yvoje verzován systémem Git\footnote{https://git-scm.com/},
 zas\'{\i}lán do centráln\'{\i}ho repozitáře a s pomoc\'{\i}
 nástroje Travis \gls{CI}\footnote{https://travis-ci.org/}
 bylo automaticky spouštěno jeho sestaven\'{\i} a otestován\'{\i}. Systém
@@ -33,9 +33,9 @@ pravděpodobnost regrese a dlouhodobě se zv\'yšila celková kvalita kódu.
 \subsection{Platforma Java}
 
 Prototyp knihovny pro platformu jazyka Java byl testován pomoc\'{\i}
-nástroje JUnit~\cite{junit4}, kter\'y poskytuje veškerou potřebnou funkcionalitu pro
+nástroje JUnit\footnote{https://junit.org/junit4/}, kter\'y poskytuje veškerou potřebnou funkcionalitu pro
 jednotkové i integračn\'{\i} testován\'{\i}. Všechny testy byly spouštěny automaticky
-při sestavován\'{\i} knihovny pomoc\'{\i} nástroje Maven~\cite{maven}.
+při sestavován\'{\i} knihovny pomoc\'{\i} nástroje Maven\footnote{https://maven.apache.org/}.
 
 \lstinputlisting[
 caption={Př\'{\i}klad jednotkového testu knihovny pro jazyk Java s využit\'{\i}m nástroje JUnit 4},
@@ -57,7 +57,7 @@ vyplněno jméno, ale emailová adresa ne.
 \subsection{Platforma Python}
 
 Prototyp knihovny pro platformu jazyka Python byl testován pomoc\'{\i}
-nástroje \code{unittest}~\cite{pythonunittest}, inspirovaného nástrojem
+nástroje \code{unittest}\footnote{https://docs.python.org/3/library/unittest.html}, inspirovaného nástrojem
 JUnit. Ačkoliv jméno obou nástrojů nasvědčuje, že slouž\'{\i} zejména pro jednotkové testy,
 lze je plně využ\'{\i}t i pro integračn\'{\i} testy.
 
@@ -82,9 +82,9 @@ identifikátoru na textov\'y řetězec.
 
 Jelikož tendence ve světě modern\'{\i}ho JavaScriptu je vytvářet knihovny s co nejmenš\'{\i}m polem působnosti,
 které jdou kombinovat do větš\'{\i}ho celku, byl prototyp knihovny pro platformu Node.js testován pomoc\'{\i}
-kombinace několika nástrojů. Spouštěn\'{\i} testů obstarává knihovna \textit{Mocha}~\cite{mocha}, zat\'{\i}mco
+kombinace několika nástrojů. Spouštěn\'{\i} testů obstarává knihovna \textit{Mocha}\footnote{https://mochajs.org/}, zat\'{\i}mco
 o ověřován\'{\i} a zápis testů ve stylu \textit{Behaviour Driven Development} (\gls{BDD})~\cite{solis2011study}
-se stará knihovna \textit{Chai}~\cite{chai}.
+se stará knihovna \textit{Chai}\footnote{http://www.chaijs.com/}.
 
 \lstinputlisting[
 caption={Př\'{\i}klad jednotkového testu knihovny pro platformu Node.js s využit\'{\i}m nástroje Mocha a Chai},
@@ -266,13 +266,13 @@ způsob \textit{service discovery} nebylo problém do systému integrovat.
 \paragraph{Billing service}
 
 Služba \textit{Billing service} má na starosti funkcionalitu t\'ykaj\'{\i}c\'{\i} se fakturace objednávek
-a byla implementována v jazyce Java s použit\'{\i}m frameworku Spring Boot~\cite{springboot}.
+a byla implementována v jazyce Java s použit\'{\i}m frameworku Spring Boot\footnote{https://projects.spring.io/spring-boot/}.
 
 \paragraph{Order service}
 
 Kompozitn\'{\i} služba \textit{Order service} slouž\'{\i}c\'{\i} pro vytvářen\'{\i} a správu objednávek
 byla implementována v jazyce Java a jej\'{\i} \gls{API} bylo sestaveno za použit\'{\i} frameworku Spring
-Boot~\cite{springboot}, jak můžeme vidět ve zdrojovém kódu~\ref{lst:order-service-springboot}, kde
+Boot, jak můžeme vidět ve zdrojovém kódu~\ref{lst:order-service-springboot}, kde
 je ukázka obsluhy požadavků na v\'ypis zbož\'{\i} v koš\'{\i}ku uživatele.
 
 \lstinputlisting[
@@ -289,7 +289,7 @@ Služba \textit{Product service} realizuje \gls{UC} t\'ykaj\'{\i}c\'{\i} se
 prohl\'{\i}žen\'{\i} a administrac\'{\i} nab\'{\i}zen\'ych
 produktů a jejich skladov\'ych zásob. Služba byla implementována v jazyce Python.
 Pro vytvořen\'{\i} \gls{REST} \gls{API} služby byl využit populárn\'{\i}
-light-weight framework \textit{Flask}~\cite{flask}.
+light-weight framework \textit{Flask}\footnote{http://flask.pocoo.org/}.
 Ve zdrojovém kódu~\ref{lst:product-service-flask} můžeme vidět použit\'{\i}
 tohoto frameworku pro obsluhu požadavku na v\'ypis všech produktů.
 
@@ -304,13 +304,13 @@ language=Python,
 \paragraph{Shipping service}
 
 Služba \textit{Shipping service} má na starosti funkcionalitu t\'ykaj\'{\i}c\'{\i} se odes\'{\i}lán\'{\i} objednávek
-a byla implementována v jazyce Java s použit\'{\i}m frameworku Spring Boot~\cite{springboot}.
+a byla implementována v jazyce Java s použit\'{\i}m frameworku Spring Boot.
 
 \paragraph{User service}
 
 Služba \textit{User service} realizuj\'{\i}c\'{\i} funkcionalitu t\'ykaj\'{\i}c\'{\i} se uživatelsk\'ych účtů byla
 implementována v jazyce JavaScript na platformě Node.js s použit\'{\i}m
-frameworku Express~\cite{expressjs}. Ve zdrojovém kódu~\ref{lst:user-service-expressjs}
+frameworku Express\footnote{https://expressjs.com/}. Ve zdrojovém kódu~\ref{lst:user-service-expressjs}
 je ukázka mapován\'{\i} controllerů na jednotlivé metody \gls{URL} \code{/users}.
 
 \lstinputlisting[
@@ -324,7 +324,7 @@ language=JavaScript,
 \paragraph{Webové uživatelské rozhran\'{\i}}
 
 Služba, která slouž\'{\i} uživatelům ukázkového systému jako webové uživatelské
-rozhran\'{\i}, byla implementována v jazyce Java s použit\'{\i}m frameworku Spring Boot~\cite{springboot}.
+rozhran\'{\i}, byla implementována v jazyce Java s použit\'{\i}m frameworku Spring Boot.
 Na sn\'{\i}mku~\ref{fig:example-screenshot} je vidět UI ukázkového systému,
 konkrétně informován\'{\i} uživatele o tom, že se nepodařilo přidat produkt
 do koš\'{\i}ku, protože bylo porušeno byznysové pravidlo – koš\'{\i}k nesm\'{\i} obsahovat
@@ -345,8 +345,8 @@ Uživatel si nadefinuje tzv. \textit{image}, kter\'y se skládá z jednotliv\'yc
 Základn\'{\i} vrstvou je operačn\'{\i} systém, dalš\'{\i}mi mohou b\'yt jednotlivé knihovny instalované do systému.
 Př\'{\i}klad definice image pomoc\'{\i} technologie Docker můžeme vidět ve zdrojovém
 kódu~\ref{lst:docker-image}. Konkrétně se jedná o definici image, kter\'y
-rozšiřuje oficiáln\'{\i} image \code{library/node:9.11.1}~\cite{dockernodeimage}
-stavěj\'{\i}c\'{\i} nad operačn\'{\i}m systémem \textit{Linux}~\cite{linux},
+rozšiřuje oficiáln\'{\i} image \code{library/node:9.11.1}\footnote{https://hub.docker.com/\_/node/}
+stavěj\'{\i}c\'{\i} nad operačn\'{\i}m systémem \textit{Linux}\footnote{https://www.linuxfoundation.org/projects/linux/},
 a přidává vrstvy s prototypem knihovny našeho frameworku pro platformu Node.js.
 
 \lstinputlisting[
