--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -73,7 +73,7 @@ byznysových pravidel za běhu systému.
 
 \section{Objektově orientované programování}\label{sec:oop}
 
-\goal{OOP a jeho popis}
+%\goal{OOP a jeho popis}
 Jedn\'{\i}m z nejpoužívanějších paradigmat používaných k
 v\'yvoji modern\'{\i}ch \gls{IS} je objektově orientované programován\'{\i} (\gls{OOP}).
 To používá koncept tzv. objektů, které zapouzdřují data a funkcionalitu do
@@ -93,7 +93,7 @@ návrhu systému a nižší náklady na vývoj a údržbu software.
 
 \subsection{Motivace}
 
-\goal{Nedostatky OOP}
+%\goal{Nedostatky OOP}
 Ačkoliv je \gls{OOP} velmi siln\'ym nástrojem, existuj\'{\i} problémy,
 které nelze v jeho rámci efektivně řešit.
 Příkladem takového problému jsou obecné požadavky na systém,
@@ -114,7 +114,7 @@ problémů a komponent informačního systému.
     \label{fig:cross-cutting}
 \end{figure}
 
-\goal{Konkrétní příklad nedostatku OOP}
+%\goal{Konkrétní příklad nedostatku OOP}
 Př\'{\i}kladem průřezového problému může b\'yt logován\'{\i}
 systémov\'ych akc\'{\i}, optimalizace správy paměti
 nebo jednotné zpracován\'{\i} v\'yjimek~\cite{kiczales1997aspect},
