much improvement, very progress

--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -185,8 +185,9 @@ basicstyle=\fontsize{10}{12}\selectfont\ttfamily
 \appendix
 
 \input{content/appendix-A-snimky}
-\input{content/appendix-B-uzivatelska-prirucka}
-\input{content/appendix-C-zkratky}
-\input{content/appendix-D-cd}
+\input{content/appendix-B-tabulky}
+\input{content/appendix-C-uzivatelska-prirucka}
+\input{content/appendix-D-zkratky}
+\input{content/appendix-E-cd}
 
 \end{document}
