--- a/reference.bib
+++ b/reference.bib
@@ -586,3 +586,12 @@
     year={2003},
     publisher={version}
 }
+
+@inproceedings{rosenberg2005business,
+    title={Business rules integration in BPEL-a service-oriented approach},
+    author={Rosenberg, Florian and Dustdar, Schahram},
+    booktitle={E-Commerce Technology, 2005. CEC 2005. Seventh IEEE International Conference on},
+    pages={476--479},
+    year={2005},
+    organization={IEEE}
+}
